# google-scraper-playwright

./: .flake8  README.md  package.json  pyproject.toml  pyrightconfig.json  sample.py
.github/workflows/: routine-tests.yml
google_scraper_pw/: __init__.py  get_page_pw.py  google_tr.py  google_tr_async.py-
tests/: conftest.py  test_google_scraper_pw_version.py  test_google_tr.py  test_simple.py  test_simple.py-
